# CafaChallenge

./: .gitignore  README.md  caf6.md  pyproject.toml  setup.sh
configs/: default.yaml
notebooks/: 01_EDA.ipynb  02_Baseline.ipynb  03_ESM2_Embeddings.ipynb  04_Train_Models.ipynb  05_Submission.ipynb  README.md
scripts/: download_data.sh  generate_embeddings.py  submit.py  train.py
src/cafa6/: __init__.py  config.py  data_loader.py  embeddings.py  go_utils.py  metrics.py  models.py  submission.py
